--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 
 <h1>Este es un sitio web con Github Pages</h1>
 <p> Fue creado para el curso de Platzi</p>
-<p><img src="https://www.pngwing.com/es/free-png-yepao.png" /></p>
+<p><img src="https://www.pngwing.com/es/free-png-yepao" /></p>
